<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp5"
        android:background="@drawable/edit_box_dialog_background"
       >


        <RelativeLayout
            android:id="@+id/rel_toolbar"
            android:layout_margin="@dimen/dp5"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/heading_background">

            <com.sapl.retailerorderingmsdpharma.customView.CustomTextViewMedium
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp5"
                android:gravity="center_horizontal"
                android:text="@string/update_order"
                android:textColor="@color/white"
                android:textSize="@dimen/card_text_size" />

            <com.sapl.retailerorderingmsdpharma.customView.CustomTextViewMedium
                android:id="@+id/txt_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_title"
                android:layout_centerHorizontal="true"
                android:text="Product Name"
                android:textColor="@color/white"
                android:textSize="@dimen/sp14" />

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/dp40"
                android:layout_height="@dimen/dp40"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/page_margin"
                android:src="@drawable/delete" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:layout_marginTop="@dimen/dp10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <com.sapl.retailerorderingmsdpharma.customView.CustomTextViewMedium
                    android:id="@+id/txt_case_lable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dp10"
                    android:text="@string/case_label"
                    android:textSize="@dimen/sp16" />

                <com.sapl.retailerorderingmsdpharma.customView.CustomEditTextMedium
                    android:id="@+id/edt_case_no"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border_background"
                    android:gravity="left"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp16" />


                <com.sapl.retailerorderingmsdpharma.customView.CustomTextViewMedium
                    android:id="@+id/txt_free_case_lable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/free_case"
                    android:textSize="@dimen/sp16" />

                <com.sapl.retailerorderingmsdpharma.customView.CustomEditTextMedium
                    android:id="@+id/txt_free_case_no"

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border_background"
                    android:gravity="left"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp16"  />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp16"
                android:layout_marginTop="@dimen/dp10"
                android:orientation="horizontal"
                android:weightSum="4">


                <com.sapl.retailerorderingmsdpharma.customView.CustomTextViewMedium
                    android:id="@+id/txt_bottle_lable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dp10"
                    android:text="@string/bottle"
                    android:textSize="@dimen/sp16" />

                <com.sapl.retailerorderingmsdpharma.customView.CustomEditTextMedium
                        android:id="@+id/edt_bottle_no"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border_background"
                    android:gravity="left"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp16" />


                <com.sapl.retailerorderingmsdpharma.customView.CustomTextViewMedium
                    android:id="@+id/txt_free_bottle_lable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/free_bottel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp16" />

                <com.sapl.retailerorderingmsdpharma.customView.CustomEditTextMedium
                    android:id="@+id/txt_free_bottle_no"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border_background"
                    android:gravity="left"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp16" />

            </LinearLayout>

            <com.sapl.retailerorderingmsdpharma.customView.CustomButtonRegular
                android:id="@+id/btn_update"
                 android:layout_margin="@dimen/dp5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/update"
                android:textSize="@dimen/card_text_size" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
