<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context="com.sapl.retailerorderingmsdpharma.activities.ActivityDashBoard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true" />

            <android.support.v7.widget.CardView
                android:id="@+id/card_order_booking"
                android:layout_marginTop="@dimen/card_top"
                android:layout_marginLeft="@dimen/page_margin"
                android:layout_marginRight="@dimen/page_margin"
                android:layout_below="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height"
                app:cardBackgroundColor="@color/gray">

                <com.sapl.retailerorderingmsdpharma.customView.CustomTextViewMedium
                    android:id="@+id/txt_order_booking"
                    android:textSize="@dimen/card_text_size"
                    android:text="@string/order_booking"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal" />
            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView
                android:id="@+id/card_order_status"
                android:layout_below="@+id/card_order_booking"
                android:layout_marginTop="@dimen/card_top"
                android:layout_marginLeft="@dimen/page_margin"
                android:layout_marginRight="@dimen/page_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height"
                app:cardBackgroundColor="@color/gray">

                <com.sapl.retailerorderingmsdpharma.customView.CustomTextViewMedium
                    android:id="@+id/txt_order_status"
                    android:text="@string/order_status"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/card_text_size"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:gravity="center_horizontal" />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/card_resource_page"
                android:layout_below="@+id/card_order_status"
                android:layout_marginTop="@dimen/card_top"
                android:layout_marginLeft="@dimen/page_margin"
                android:layout_marginRight="@dimen/page_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height"
                app:cardBackgroundColor="@color/gray">

                <com.sapl.retailerorderingmsdpharma.customView.CustomTextViewMedium
                    android:id="@+id/txt_resource_page"
                    android:text="@string/resource_page"
                    android:textSize="@dimen/card_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_update_profile"
                android:layout_below="@+id/card_resource_page"
                android:layout_marginTop="@dimen/card_top"
                android:layout_marginLeft="@dimen/page_margin"
                android:layout_marginRight="@dimen/page_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height"
                app:cardBackgroundColor="@color/gray">

                <com.sapl.retailerorderingmsdpharma.customView.CustomTextViewMedium
                    android:id="@+id/txt_update_profile"
                    android:text="@string/update_profile"
                    android:textSize="@dimen/card_text_size"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal" />
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
