<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">




    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="@color/grey_300"
        android:visibility="visible"
        android:elevation="@dimen/dp3"

        />
    <RelativeLayout
        android:id="@+id/rel_toolbar_signing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar_signing"
            layout="@layout/toolbar_signing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />
    </RelativeLayout>


    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="@color/grey_300"
        android:visibility="visible"
        android:elevation="@dimen/dp3"

        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/page_margin"
        android:layout_marginRight="@dimen/page_margin"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/img_shop_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp26"
            android:gravity="center_horizontal"
            android:scaleType="center"
            android:src="@mipmap/msd_logo_1"
            android:tint="@color/grey_800"/>

        <RelativeLayout
            android:id="@+id/rel_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_shop_logo"
            android:layout_margin="@dimen/page_margin"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/rel_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_username"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp40"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:src="@drawable/user_name"
                    android:tint="@color/black"
                    />

                <com.sapl.retailerorderingmsdpharma.customView.CustomEditTextMedium
                    android:id="@+id/edt_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="6"
                    android:hint="@string/enter_user_name"
                    android:outlineProvider="none"
                    android:padding="@dimen/dp5"
                    android:textSize="@dimen/sp16" />
            </LinearLayout>

            <com.sapl.retailerorderingmsdpharma.customView.CustomUnderLine
                android:id="@+id/view_username"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/rel_username" />


            <LinearLayout
                android:id="@+id/rel_client_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rel_username"
                android:layout_weight="7"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp10">

                <ImageButton
                    android:id="@+id/btn_clientId_btn"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp40"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:src="@drawable/user_name"
                    android:tint="@color/black" />

                <com.sapl.retailerorderingmsdpharma.customView.CustomEditTextMedium
                    android:id="@+id/edt_client_ID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="6"
                    android:hint="@string/enter_client_ID"
                    android:outlineProvider="none"
                    android:padding="@dimen/dp5"
                    android:textSize="@dimen/sp16"
                    android:inputType="number"/>
            </LinearLayout>

            <com.sapl.retailerorderingmsdpharma.customView.CustomUnderLine
                android:id="@+id/view_client_ID_VIEW"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/rel_client_id" />


            <LinearLayout
                android:id="@+id/rel_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rel_client_id"
                android:layout_marginTop="@dimen/dp10"
                android:layout_weight="7"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_password"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp40"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:src="@drawable/password"
                    android:tint="@color/black" />

                <com.sapl.retailerorderingmsdpharma.customView.CustomEditTextMedium
                    android:id="@+id/edt_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="6"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:outlineProvider="none"
                    android:padding="@dimen/dp5"
                    android:textSize="@dimen/sp16"
                    android:textStyle="normal" />




            </LinearLayout>

            <com.sapl.retailerorderingmsdpharma.customView.CustomUnderLine
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/rel_password" />

            <com.sapl.retailerorderingmsdpharma.customView.CustomTextViewRegular
                android:id="@+id/txt_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/rel_password"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/forgot_password"
                android:textColor="@color/heading_background"
                android:textSize="@dimen/sp14" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_data"
            android:layout_marginLeft="@dimen/page_margin"
            android:layout_marginRight="@dimen/page_margin">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/card_text_size"

                android:background="@color/maroon"/>

            <com.sapl.retailerorderingmsdpharma.customView.CustomTextViewRegular
                android:id="@+id/txt_sign_up_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/btn_login"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/sign_up_link"
                android:textColor="@color/heading_background"
                android:textSize="@dimen/sp14" />


        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>